--- a/index.html
+++ b/index.html
@@ -1,12 +1,45 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Week Planner</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <script src="main.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Week Planner</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="full-column">
+      <h1>Weekly Planner</h1>
+      <h2>Choose Day to Show Events</h2>
+      <div>
+        <label for="chooseDay">Day of Week</label>
+      </div>
+      <div>
+        <select id="chooseDay" name="chooseDay">
+          <option value="monday">Monday</option>
+          <option value="tuesday">Tuesday</option>
+          <option value="wednesday">Wednesday</option>
+          <option value="thursday">Thursday</option>
+          <option value="friday">Friday</option>
+          <option value="saturday">Saturday</option>
+          <option value="sunday">Sunday</option>
+        </select>
+      </div>
+      <button type="submit">Add New Event</button>
+    </div>
+    <div class="full-column">
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Time</th>
+            <th>Event</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+      </table>
+    </div>
+    <div class="row">
+      <p>2024 Week Planer Inc</p>
+    </div>
+    <script src="main.js"></script>
+  </body>
 </html>
