--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Week Planner</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="layout.css" />
   </head>
   <body>
-    <div class="full-column">
+    <div class="column-full align-center">
       <h1>Weekly Planner</h1>
       <h2>Choose Day to Show Events</h2>
       <div>
@@ -24,9 +25,8 @@
           <option value="sunday">Sunday</option>
         </select>
       </div>
-      <button type="submit">Add New Event</button>
-    </div>
-    <div class="full-column">
+      <button class="new-event-button" type="submit">Add New Event</button>
+
       <table class="table">
         <thead>
           <tr>
@@ -34,12 +34,30 @@
             <th>Event</th>
             <th>Actions</th>
           </tr>
+          <tr>
+            <td>trst</td>
+            <td>test</td>
+            <td>test</td>
+          </tr>
+          <tr>
+            <td>test</td>
+            <td>test</td>
+            <td>test</td>
+          </tr>
+          <tr></tr>
+          <tr></tr>
+          <tr></tr>
+          <tr></tr>
+          <tr></tr>
+          <tr></tr>
+          <tr></tr>
         </thead>
       </table>
+      <div class="row">
+        <p>2024 Week Planer Inc</p>
+      </div>
     </div>
-    <div class="row">
-      <p>2024 Week Planer Inc</p>
-    </div>
+
     <script src="main.js"></script>
   </body>
 </html>
