--- a/index.html
+++ b/index.html
@@ -91,7 +91,34 @@
     <dialog>
       <div class="column-full">
         <label for="event-time">Time of Event:</label>
-        <select name="event-time" id="event-time"></select>
+        <select name="event-time" id="event-time">
+          <option value="">Choose a Time</option>
+          <option value="0000">0000</option>
+          <option value="0100">0100</option>
+          <option value="0200">0200</option>
+          <option value="0300">0300</option>
+          <option value="0400">0400</option>
+          <option value="0500">0500</option>
+          <option value="0600">0600</option>
+          <option value="0700">0700</option>
+          <option value="0800">0800</option>
+          <option value="0900">0900</option>
+          <option value="1000">1000</option>
+          <option value="1100">1100</option>
+          <option value="1200">1200</option>
+          <option value="1300">1300</option>
+          <option value="1400">1400</option>
+          <option value="1500">1500</option>
+          <option value="1600">1600</option>
+          <option value="1700">1700</option>
+          <option value="1800">1800</option>
+          <option value="1900">1900</option>
+          <option value="2000">2000</option>
+          <option value="2100">2100</option>
+          <option value="2200">2200</option>
+          <option value="2300">2300</option>
+          <option value="2400">2400</option>
+        </select>
 
         <label for="day-of-week-modal"> Day of Week:</label>
         <select name="day-of-week-modal" id="day-of-week-modal">
@@ -105,8 +132,14 @@
         </select>
 
         <label for="event-info">Event Information:</label>
-        <textarea name="event-info" id="event-info" cols="30" rows="15">
-        </textarea>
+        <div class="row">
+          <textarea
+            class="padding-top-5"
+            name="event-info"
+            id="event-info"
+            cols="30"
+            rows="15"></textarea>
+        </div>
         <div class="row justify-space-evenly">
           <button class="cancel-button">Cancel</button>
           <button class="confirm-button">Confirm</button>
