--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>Weekly Planner</h1>
       <h2>Choose Day to Show Events</h2>
       <div>
-        <label for="chooseDay">Day of Week</label>
+        <label class="" for="chooseDay">Day of Week</label>
       </div>
       <div>
         <select id="chooseDay" name="chooseDay">
@@ -86,9 +86,7 @@
       </div>
     </div>
 
-    <script src="main.js"></script>
-
-    <dialog>
+    <dialog class="event-modal">
       <div class="column-full">
         <label for="event-time">Time of Event:</label>
         <select name="event-time" id="event-time">
@@ -120,7 +118,9 @@
           <option value="2400">2400</option>
         </select>
 
-        <label for="day-of-week-modal"> Day of Week:</label>
+        <label for="day-of-week-modal" class="margin-top-10">
+          Day of Week:</label
+        >
         <select name="day-of-week-modal" id="day-of-week-modal">
           <option value="monday">Monday</option>
           <option value="tuesday">Tuesday</option>
@@ -131,7 +131,7 @@
           <option value="sunday">Sunday</option>
         </select>
 
-        <label for="event-info">Event Information:</label>
+        <label for="event-info" class="margin-top-10">Event Information:</label>
         <div class="row">
           <textarea
             class="padding-top-5"
@@ -141,10 +141,12 @@
             rows="15"></textarea>
         </div>
         <div class="row justify-space-evenly">
-          <button class="cancel-button">Cancel</button>
-          <button class="confirm-button">Confirm</button>
+          <button class="dismiss-modal margin-top-10">Cancel</button>
+          <button class="confirm-button margin-top-10">Confirm</button>
         </div>
       </div>
     </dialog>
+
+    <script src="main.js"></script>
   </body>
 </html>
