--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
       <button class="new-event-button" type="submit">Add New Event</button>
 
-      <table class="table" id="monday-table">
+      <table class="table monTable" id="monday-table">
         <thead>
           <tr>
             <th>Time</th>
@@ -81,7 +81,7 @@
           </tr>
         </thead>
       </table>
-      <table class="table hidden" id="tuesday-table">
+      <table class="table tueTable hidden" id="tuesday-table">
         <thead>
           <tr>
             <th>Time</th>
@@ -135,7 +135,7 @@
           </tr>
         </thead>
       </table>
-      <table class="table hidden" id="wednesday-table">
+      <table class="table wedTable hidden" id="wednesday-table">
         <thead>
           <tr>
             <th>Time</th>
@@ -189,7 +189,7 @@
           </tr>
         </thead>
       </table>
-      <table class="table hidden" id="thursday-table">
+      <table class="table thurTable hidden" id="thursday-table">
         <thead>
           <tr>
             <th>Time</th>
@@ -243,7 +243,7 @@
           </tr>
         </thead>
       </table>
-      <table class="table hidden" id="friday-table">
+      <table class="table friTable hidden" id="friday-table">
         <thead>
           <tr>
             <th>Time</th>
@@ -297,7 +297,7 @@
           </tr>
         </thead>
       </table>
-      <table class="table hidden" id="saturday-table">
+      <table class="table satTable hidden" id="saturday-table">
         <thead>
           <tr>
             <th>Time</th>
@@ -351,7 +351,7 @@
           </tr>
         </thead>
       </table>
-      <table class="table hidden" id="sunday-table">
+      <table class="table sunTable hidden" id="sunday-table">
         <thead>
           <tr>
             <th>Time</th>
@@ -411,64 +411,67 @@
     </div>
 
     <dialog class="event-modal">
-      <div class="column-full">
-        <label for="event-time">Time of Event:</label>
-        <select name="event-time" id="event-time">
-          <option value="">Choose a Time</option>
-          <option value="0000">0000</option>
-          <option value="0100">0100</option>
-          <option value="0200">0200</option>
-          <option value="0300">0300</option>
-          <option value="0400">0400</option>
-          <option value="0500">0500</option>
-          <option value="0600">0600</option>
-          <option value="0700">0700</option>
-          <option value="0800">0800</option>
-          <option value="0900">0900</option>
-          <option value="1000">1000</option>
-          <option value="1100">1100</option>
-          <option value="1200">1200</option>
-          <option value="1300">1300</option>
-          <option value="1400">1400</option>
-          <option value="1500">1500</option>
-          <option value="1600">1600</option>
-          <option value="1700">1700</option>
-          <option value="1800">1800</option>
-          <option value="1900">1900</option>
-          <option value="2000">2000</option>
-          <option value="2100">2100</option>
-          <option value="2200">2200</option>
-          <option value="2300">2300</option>
-          <option value="2400">2400</option>
-        </select>
+      <form class="modal-form">
+        <div class="column-full">
+          <label for="event-time">Time of Event:</label>
+          <select name="event-time" id="event-time">
+            <option value="">Choose a Time</option>
+            <option value="0000">0000</option>
+            <option value="0100">0100</option>
+            <option value="0200">0200</option>
+            <option value="0300">0300</option>
+            <option value="0400">0400</option>
+            <option value="0500">0500</option>
+            <option value="0600">0600</option>
+            <option value="0700">0700</option>
+            <option value="0800">0800</option>
+            <option value="0900">0900</option>
+            <option value="1000">1000</option>
+            <option value="1100">1100</option>
+            <option value="1200">1200</option>
+            <option value="1300">1300</option>
+            <option value="1400">1400</option>
+            <option value="1500">1500</option>
+            <option value="1600">1600</option>
+            <option value="1700">1700</option>
+            <option value="1800">1800</option>
+            <option value="1900">1900</option>
+            <option value="2000">2000</option>
+            <option value="2100">2100</option>
+            <option value="2200">2200</option>
+            <option value="2300">2300</option>
+          </select>
 
-        <label for="day-of-week-modal" class="margin-top-10">
-          Day of Week:</label
-        >
-        <select name="day-of-week-modal" id="day-of-week-modal">
-          <option value="monday">Monday</option>
-          <option value="tuesday">Tuesday</option>
-          <option value="wednesday">Wednesday</option>
-          <option value="thursday">Thursday</option>
-          <option value="friday">Friday</option>
-          <option value="saturday">Saturday</option>
-          <option value="sunday">Sunday</option>
-        </select>
+          <label for="day-of-week-modal" class="margin-top-10">
+            Day of Week:</label
+          >
+          <select name="day-of-week-modal" id="day-of-week-modal">
+            <option value="monday">Monday</option>
+            <option value="tuesday">Tuesday</option>
+            <option value="wednesday">Wednesday</option>
+            <option value="thursday">Thursday</option>
+            <option value="friday">Friday</option>
+            <option value="saturday">Saturday</option>
+            <option value="sunday">Sunday</option>
+          </select>
 
-        <label for="event-info" class="margin-top-10">Event Information:</label>
-        <div class="row">
-          <textarea
-            class="padding-top-5"
-            name="event-info"
-            id="event-info"
-            cols="30"
-            rows="15"></textarea>
+          <label for="event-info" class="margin-top-10"
+            >Event Information:</label
+          >
+          <div class="row">
+            <textarea
+              class="padding-top-5"
+              name="event-info"
+              id="event-info"
+              cols="30"
+              rows="15"></textarea>
+          </div>
+          <div class="row justify-space-evenly">
+            <button class="dismiss-modal margin-top-10">Cancel</button>
+            <button class="confirm-button margin-top-10">Confirm</button>
+          </div>
         </div>
-        <div class="row justify-space-evenly">
-          <button class="dismiss-modal margin-top-10">Cancel</button>
-          <button class="confirm-button margin-top-10">Confirm</button>
-        </div>
-      </div>
+      </form>
     </dialog>
 
     <script src="main.js"></script>
