started on modal form submission

--- a/index.html
+++ b/index.html
@@ -467,7 +467,9 @@
               rows="15"></textarea>
           </div>
           <div class="row justify-space-evenly">
-            <button class="dismiss-modal margin-top-10">Cancel</button>
+            <button type="button" class="dismiss-modal margin-top-10">
+              Cancel
+            </button>
             <button class="confirm-button margin-top-10">Confirm</button>
           </div>
         </div>
