--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
             <th>Event</th>
             <th>Actions</th>
           </tr>
-          <tr>
-            <td>Monday</td>
-            <td>test</td>
-            <td>test</td>
+          <tr class="tr-list">
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
           <tr>
-            <td>test</td>
-            <td>test</td>
-            <td>test</td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
           <tr>
             <td></td>
