--- a/index.html
+++ b/index.html
@@ -34,11 +34,7 @@
             <th>Event</th>
             <th>Actions</th>
           </tr>
-          <tr class="tr-list">
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
+          <tr class="tr-list"></tr>
           <tr>
             <td></td>
             <td></td>
