I shoot and I brick

--- a/index.html
+++ b/index.html
@@ -34,43 +34,47 @@
             <th>Event</th>
             <th>Actions</th>
           </tr>
-          <tr class="tr-list"></tr>
-          <tr>
+          <tr class="tr-list">
             <td></td>
             <td></td>
             <td></td>
           </tr>
-          <tr>
+          <tr class="tr-list">
             <td></td>
             <td></td>
             <td></td>
           </tr>
-          <tr>
+          <tr class="tr-list">
             <td></td>
             <td></td>
             <td></td>
           </tr>
-          <tr>
+          <tr class="tr-list">
             <td></td>
             <td></td>
             <td></td>
           </tr>
-          <tr>
+          <tr class="tr-list">
             <td></td>
             <td></td>
             <td></td>
           </tr>
-          <tr>
+          <tr class="tr-list">
             <td></td>
             <td></td>
             <td></td>
           </tr>
-          <tr>
+          <tr class="tr-list">
             <td></td>
             <td></td>
             <td></td>
           </tr>
-          <tr>
+          <tr class="tr-list">
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr class="tr-list">
             <td></td>
             <td></td>
             <td></td>
@@ -79,52 +83,52 @@
       </table>
       <table class="table tueTable hidden" id="tuesday-table">
         <thead>
-          <tr>
+          <tr class="tr-list">
             <th>Time</th>
             <th>Event</th>
             <th>Actions</th>
           </tr>
-          <tr>
+          <tr class="tr-list">
             <td>Tuesday</td>
             <td>test</td>
             <td>test</td>
           </tr>
-          <tr>
+          <tr class="tr-list">
             <td>test</td>
             <td>test</td>
             <td>test</td>
           </tr>
-          <tr>
+          <tr class="tr-list">
             <td></td>
             <td></td>
             <td></td>
           </tr>
-          <tr>
+          <tr class="tr-list">
             <td></td>
             <td></td>
             <td></td>
           </tr>
-          <tr>
+          <tr class="tr-list">
             <td></td>
             <td></td>
             <td></td>
           </tr>
-          <tr>
+          <tr class="tr-list">
             <td></td>
             <td></td>
             <td></td>
           </tr>
-          <tr>
+          <tr class="tr-list">
             <td></td>
             <td></td>
             <td></td>
           </tr>
-          <tr>
+          <tr class="tr-list">
             <td></td>
             <td></td>
             <td></td>
           </tr>
-          <tr>
+          <tr class="tr-list">
             <td></td>
             <td></td>
             <td></td>
